spec/.test/config/invalid/entry/mappers.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
    'passes' => [],
    'mappers' => [
        Test\SomeInterface1::class => 'id1',
        Test\SomeInterface2::class => [],
        Test\SomeInterface3::class => 'id3',
    ],
];
